--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  provider: ^4.0.4
+  flutter_bloc: ^3.2.0
+  intl: ^0.16.0
+  get_it: ^3.0.3
+  meta: ^1.1.7
+  equatable: ^1.1.0
+  firebase_auth: 0.15.3
+  device_info: ^0.4.1+4
+  firebase_core: 0.4.4
 
 dev_dependencies:
   flutter_test:
