--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,16 +19,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
-  provider: ^4.0.4
   flutter_bloc: ^3.2.0
-  intl: ^0.16.0
-  get_it: ^3.0.3
   meta: ^1.1.7
   equatable: ^1.1.0
   firebase_auth: 0.15.3
-  device_info: ^0.4.1+4
   firebase_core: 0.4.4
+  flutter_signin_button: ^1.0.0
+  google_sign_in: ^4.0.0
+  font_awesome_flutter: ^8.4.0
+
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +44,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
