--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,14 @@ dependencies:
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.0.0
   font_awesome_flutter: ^8.4.0
+  google_maps_flutter: ^0.5.24+1
+  http: ^0.12.0+1
+  json_serializable: ^2.0.2
 
 
 dev_dependencies:
+  pedantic: ^1.4.0
+  build_runner: ^1.2.7
   flutter_test:
     sdk: flutter
 
